# prospector-agent

./: .env.example  .gitignore  README.md  config.example.json  pyproject.toml
docs/superpowers/plans/: 2026-07-14-m1-fundacao.md  2026-07-14-m2-descoberta-qualificacao.md  2026-07-14-m3-criacao-publicacao.md  2026-07-14-m4-envio-telegram-orquestrador.md
docs/superpowers/specs/: 2026-07-14-prospector-agent-design.md
guia/: index.html
prospector/: __main__.py  cli.py  config.py  maquina_estados.py  modelos.py
prospector/canal/: boundaries.py  mensagens.py  telegram_bot.py
prospector/criacao/: boundaries.py  capa.py  criador.py
prospector/descoberta/: base.py  fake.py  navegador.py
prospector/envio/: boundaries.py  mailer.py
prospector/estado/: db.py
prospector/orquestrador/: nucleo.py
prospector/publicacao/: boundaries.py  github_pages.py
prospector/qualificacao/: boundaries.py  qualificador.py
tests/: test_capa.py  test_cli_atender.py  test_cli_criar_publicar.py  test_cli_dryrun.py  test_cli_prospectar.py  test_config.py  test_criador.py  test_db.py  test_descoberta_base.py  test_fake.py  test_mailer.py  test_maquina_estados.py  test_mensagens.py  test_modelos.py  test_navegador_parse.py  test_orquestrador.py  test_publicador.py  test_qualificador.py  test_smoke.py
